# spras-benchmarking

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Annotation Networks.cys  CONTRIBUTING.md  README.md  _typos.toml  json2spras.py  overlap_info_df.csv  process.sh  pyproject.toml  pytest.ini  run_snakemake.sh
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
cache/: README.md  Snakefile  __init__.py  cli.py  directory.py  index.py  link.py  util.py
cache/biomart/: README.md  ensg-ensp.xml
configs/: base.yaml  config.yaml  depmap.yaml  diseases.yaml  dmmm.yaml  pra.yaml  scores.yaml
databases/: README.md  stringdb.py
databases/irefindex/: README.md
datasets/: README.md
datasets/contributing/: .gitignore  README.md  raw_generation.py
datasets/depmap/: .gitignore  README.md  Snakefile
datasets/diseases/: .gitignore  README.md  Snakefile  disease_mapping.py
datasets/egfr/: .gitignore  README.md  Snakefile  metadata.jsonc
datasets/example/: README.md  raw_generation.py
datasets/hiv/: .gitignore  README.md  Snakefile
datasets/reactome-synthetic/: .gitignore  README.md
datasets/rn-muscle-skeletal/: README.md  Snakefile  process.py
datasets/rn_muscle_skeletal/: README.md  Snakefile
datasets/synthetic-data/: .gitignore  README.md  Snakefile
datasets/synthetic_data/: .gitignore  README.md  Snakefile  pathways.jsonc
datasets/wikipathways/: README.md
datasets/wikipathways/wikinetworks/: README.md  pyproject.toml
datasets/wikipathways/wikinetworks/src/wikinetworks/: __init__.py
datasets/yeast-osmotic-stress/: File_compare.py  README.md  Snakefile  process_prizes.py
datasets/yeast_osmotic_stress/: README.md  Snakefile  (+1 more)
egfr/: egfr-param-tuning.yaml
erbb_gold_standard/: erbb_edges_gold_standard.txt  hsa_uniprot_03122025.list  parse_kegg_egfr.ipynb
hiv-benchmarking/: build_protein_dummy_prize_file.ipynb  erbb_edges_swissprot.tsv  map_dummy_nodes.ipynb  parse_kegg_egfr.ipynb
output/: out_pathcyto_edge_out_SN.txt
preprocessing/: ProcessPantherPathway.R  SPRAS_Benchmark_Data_Processing.R  network.py  network_draft.py
queue/: .gitignore  README.md  amend.py
responsenet-benchmarking/: README.md  environment.yml  prep_cyto.py
synthetic-benchmarking/: README.md
synthetic-data/: README.md
tests/: test_directory_redirects.py
tools/: README.md  interactome.py  sample.py  trim.py
web/: .gitignore  README.md  astro.config.mjs  astro.config.mts  generate.py  index.html  package.json  pnpm-lock.yaml
yeast-osmotic-stress/: README.md
(+532 files in other folders)
