[project]
name = "spras-benchmarking"
version = "0.1.0"
description = "SPRAS Benchmarking Repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "more-itertools>=10.7.0",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "paxtools>=6.0.0.post1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "snakemake==9.9.0",
]

[tool.ruff]
line-length = 150

[tool.uv]
package = true

[tool.setuptools.packages]
find = {namespaces = false} 
