[project]
name = "spras-benchmarking"
version = "0.1.0"
description = "SPRAS Benchmarking Repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "more-itertools>=10.7.0",
    "networkx>=3.6.1",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "snakemake==9.9.0",
]

[tool.ruff]
line-length = 150

[tool.uv]
package = true

[tool.setuptools.packages]
find = {namespaces = false} 

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
