[project]
name = "spras-benchmarking"
version = "0.1.0"
description = "SPRAS Benchmarking Repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "frozendict>=2.4.7",
    "gdown>=5.2.0",
    "jsonc-parser>=1.1.5",
    "loguru>=0.7.3",
    "more-itertools>=10.7.0",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "paxtools>=6.0.0.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "snakemake==9.9.0",
]

[tool.ruff]
line-length = 150
exclude = ["spras"]

[tool.ruff.lint]
extend-ignore = ["E712"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
namespaces = false
where = ["./"]
include = ["cache", "tools"]
exclude = ["spras*"]

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
