[project]
name = "wikinetworks"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "matplotlib>=3.10.6",
    "networkx>=3.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "unidecode>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
